--- a/prometheus/templates/configmap.yaml
+++ b/prometheus/templates/configmap.yaml
@@ -16,15 +16,13 @@ data:
       - job_name: 'blackbox'
         metrics_path: /probe
         params:
-          module: [http_2xx]
+          module: [{{ .Values.config.blackbox.module }}]
         static_configs:
-          - targets:
-            - http://myapp.canary-demo.svc.cluster.local/
-            - http://myapp.canary-demo.svc.cluster.local/health
+          - targets: {{ toJson .Values.config.blackbox.targets }}
         relabel_configs:
           - source_labels: [__address__]
             target_label: __param_target
           - source_labels: [__param_target]
             target_label: instance
           - target_label: __address__
-            replacement: blackbox-exporter-prometheus-blackbox-exporter.monitoring.svc.cluster.local:9115
+            replacement: {{ .Values.config.blackbox.service }}
